Trying to fix dead lock in KAction. Failed for now.